[package]
name = "project_one"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "simon-says"
path = "src/simon-says/bin/main.rs"

[[bin]]
name = "duck-fight"
path = "src/duck-fight/bin/main.rs"

[[bin]]
name = "json-events-to-lua"
path = "src/json-events-to-lua/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
gjson = "0.7"